name:                   py2bf
version:                0.0.0
author:                 itchyny <https://github.com/itchyny>
maintainer:             itchyny <https://github.com/itchyny>
category:               Compiler
build-type:             Simple
cabal-version:          >=1.2

executable main
  hs-source-dirs:       src
  main-is:              py2bf.hs
  build-depends:        base

test-suite spec
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0
  build-depends:        base
                      , hspec

