name:                   py2bf
version:                0.0.0
author:                 itchyny <https://github.com/itchyny>
maintainer:             itchyny <https://github.com/itchyny>
license:                MIT
license-file:           LICENSE
category:               Compiler
build-type:             Simple
cabal-version:          >=1.8

library
  build-depends:        base
  ghc-options:          -O3 -Wall -Werror
  exposed-modules:      Language.Brainfuck.Py2Bf
                      , Language.Brainfuck.Py2Bf.Bfprim
                      , Language.Brainfuck.Py2Bf.Bf

executable py2bf
  hs-source-dirs:       src
  main-is:              py2bf.hs
  build-depends:        base
  ghc-options:          -O3 -Wall -Werror

test-suite spec
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0
  ghc-options:          -Wall -Werror
  build-depends:        base
                      , hspec
                      , QuickCheck
                      , py2bf
